@startuml
class BulletPool {
    + LendPlayer(shotPos:Vector3, bulletNumber:int) : Bullet
    + LendEnemy(shotPos:Vector3, bulletNumber:int) : Bullet
    + ReturnPool(bullet:Bullet, bulletNumber:int) : void
}
class "IObjectPool`1"<T> {
}
MonoBehaviour <|-- BulletPool
"IObjectPool`1" "<Bullet>" <|-- BulletPool
@enduml
